--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h2>Infinite Scroll</h2>
-    <main>
+    <main class="container">
       <ol id="infi-list"></ol>
     </main>
     <script src="./script.js"></script>
